--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,6 +41,7 @@ dependencies {
     compile dependencies.supportCardView
     compile dependencies.supportDesign
 
+    compile dependencies.javaxAnnotation
     compile dependencies.dagger
     kapt dependencies.daggerCompiler
 
@@ -56,12 +57,33 @@ dependencies {
 
     compile dependencies.timber
     compile dependencies.glide
+    compile dependencies.adapterHelper
 
     compile dependencies.kotlinStdlib
     compile dependencies.kotlinReflect
 
-    compile "org.jetbrains.anko:anko:0.10.1"
+    // Anko Layouts
+    compile "org.jetbrains.anko:anko-sdk25:0.10.1" // sdk15, sdk19, sdk21, sdk23 are also available
+    compile "org.jetbrains.anko:anko-appcompat-v7:0.10.1"
+    compile "org.jetbrains.anko:anko-coroutines:0.10.1"
+
+    // Coroutine listeners for Anko Layouts
+    compile "org.jetbrains.anko:anko-sdk25-coroutines:0.10.1"
+    compile "org.jetbrains.anko:anko-appcompat-v7-coroutines:0.10.1"
+
+    // CardView-v7
+    compile "org.jetbrains.anko:anko-cardview-v7:0.10.1"
+
+    // Design
+    compile "org.jetbrains.anko:anko-design:0.10.1"
+    compile "org.jetbrains.anko:anko-design-coroutines:0.10.1"
+
+    // RecyclerView-v7
+    compile "org.jetbrains.anko:anko-recyclerview-v7:0.10.1"
+    compile "org.jetbrains.anko:anko-recyclerview-v7-coroutines:0.10.1"
+
 }
+
 kotlin {
     experimental {
         coroutines "error"
