--- a/build.gradle
+++ b/build.gradle
@@ -7,8 +7,8 @@ buildscript {
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:2.3.3'
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.1.4-3"
-        classpath "org.jetbrains.kotlin:kotlin-android-extensions:1.1.4"
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.1.50"
+        classpath "org.jetbrains.kotlin:kotlin-android-extensions:1.1.50"
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -28,36 +28,37 @@ task clean(type: Delete) {
 }
 
 ext {
-    kotlinVersion = "1.1.4"
+    kotlinVersion = "1.1.50"
     // Sdk and tools
-    buildToolsVersion = "25.0.2"
-    compileSdkVersion = 25
+    buildToolsVersion = "26.0.2"
+    compileSdkVersion = 26
     minSdkVersion = 19
-    targetSdkVersion = 25
+    targetSdkVersion = 26
     versionCode = 1
     versionName = "1.0.0"
     javaVersion = JavaVersion.VERSION_1_8
 
-    supportLibVersion = "25.3.1"
+    supportLibVersion = "26.+"
+    constraintLayout = '1.0.2'
     multidexVersion = "1.0.1"
     daggerVersion = "2.11"
     javaxAnnotationVersion = "10.0-b28"
-    butterKnifeVersion = "8.6.0"
+    butterKnifeVersion = "8.8.1"
     timberVersion = "4.5.1"
 
-    okhttpVersion = "3.8.0"
+    okhttpVersion = "3.9.0"
     retrofitVersion = "2.3.0"
-    rxjava2Version = "2.1.0"
+    rxjava2Version = "2.1.4"
     rxAndroid2Version = "2.0.1"
-    rxLifecycle2Version = "2.1.0"
+    rxLifecycle2Version = "2.2.0"
     rxBinding2Version = "2.0.0"
     rxPermissionVersion = "0.9.4@aar"
-    glideVersion = "3.8.0"
+    glideVersion = "4.1.1"
 
     arouterApiVersion = "1.2.1.1"
     arouterCompilerVersion = "1.1.2.1"
 
-    adapterHelperVersion = "2.9.19"
+    adapterHelperVersion = "2.9.31"
     archVersion = 'latest.release'
 
     dependencies = [
@@ -83,6 +84,7 @@ ext {
             retrofitGsonConverter   : "com.squareup.retrofit2:converter-gson:$retrofitVersion",
             retrofitRxjavaAdapter2  : "com.squareup.retrofit2:adapter-rxjava2:$retrofitVersion",
             glide                   : "com.github.bumptech.glide:glide:$glideVersion",
+            glideCompiler           : "com.github.bumptech.glide:compiler:$glideVersion",
 
             // support
             supportMultidex         : "com.android.support:multidex:$multidexVersion",
@@ -91,10 +93,7 @@ ext {
             supportRecyclerview     : "com.android.support:recyclerview-v7:$supportLibVersion",
             supportAnnotations      : "com.android.support:support-annotations:$supportLibVersion",
             supportCardView         : "com.android.support:cardview-v7:$supportLibVersion",
-
-            // ARouter
-            arouter                 : "com.alibaba:arouter-api:$arouterApiVersion",
-            arouterCompiler         : "com.alibaba:arouter-compiler:$arouterCompilerVersion",
+            constraintLayout        : "com.android.support.constraint:constraint-layout:$constraintLayout",
 
             // kotlin
             kotlinStdlib            : "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlinVersion",
