--- a/build.gradle
+++ b/build.gradle
@@ -60,6 +60,7 @@ ext {
 
     adapterHelperVersion = "2.9.31"
     archVersion = 'latest.release'
+    utilCodeVersion = '1.9.3'
 
     dependencies = [
             // tools
@@ -68,6 +69,7 @@ ext {
             javaxAnnotation         : "org.glassfish:javax.annotation:$javaxAnnotationVersion",
             butterKnife             : "com.jakewharton:butterknife:$butterKnifeVersion",
             butterKnifeCompiler     : "com.jakewharton:butterknife-compiler:$butterKnifeVersion",
+            utilCode                : "com.blankj:utilcode:$utilCodeVersion",
 
             timber                  : "com.jakewharton.timber:timber:$timberVersion",
             adapterHelper           : "com.github.CymChad:BaseRecyclerViewAdapterHelper:$adapterHelperVersion",
