--- a/gankarch/build.gradle
+++ b/gankarch/build.gradle
@@ -15,6 +15,9 @@ android {
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
 
     }
+    dataBinding {
+        enabled = true
+    }
     buildTypes {
         release {
             minifyEnabled false
@@ -47,9 +50,9 @@ dependencies {
     compile dependencies.retrofitGsonConverter
     compile dependencies.okhttpLoggingInterceptor
 
+    compile dependencies.rxJava2
+    compile dependencies.rxAndroid2
 //    compile dependencies.retrofitRxjavaAdapter2
-//    compile dependencies.rxJava2
-//    compile dependencies.rxAndroid2
 //    compile dependencies.rxLifecycle2
 //    compile dependencies.rxBinding2
 //    compile dependencies.rxPermission2
