--- a/gankarch/build.gradle
+++ b/gankarch/build.gradle
@@ -37,8 +37,6 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-//    compile 'com.android.support:appcompat-v7:26.+'
-    compile 'com.android.support.constraint:constraint-layout:1.0.2'
     testCompile 'junit:junit:4.12'
 
     def dependencies = rootProject.ext.dependencies
@@ -47,7 +45,7 @@ dependencies {
     compile dependencies.supportRecyclerview
     compile dependencies.supportCardView
     compile dependencies.supportDesign
-//    compile dependencies.constraintLayout
+    compile dependencies.constraintLayout
 
     compile dependencies.retrofit
     compile dependencies.retrofitGsonConverter
