--- a/gankarch/build.gradle
+++ b/gankarch/build.gradle
@@ -19,6 +19,9 @@ android {
     dataBinding {
         enabled = true
     }
+    sourceSets {
+        main.java.srcDirs += 'src/main/kotlin'
+    }
     buildTypes {
         release {
             minifyEnabled false
